# cpp-library-template-with-cmake

./: CMakeLists.txt  LICENSE.md  README.md
example/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  MyLibrary.cpp  private.cpp  private.h
src/include/MyLibrary/: MyLibrary.h
test/: CMakeLists.txt  tests_source.cpp
